# temporal-sqlalchemy

./: .gitignore  README.md  activities.py  app.py  clippy.py  pyproject.toml  run_worker.py  run_workflow.py  todo_app.db  workflows.py
static/: app.js  style.css
templates/: index.html
